test/functions/deitz/compilerErrorOnSetter.good
compilerErrorOnSetter.chpl:11: error: foo() used in value context!
